--- a/landing.css
+++ b/landing.css
@@ -3,6 +3,21 @@
     margin: 0;
     padding: 0;
 }
+
+:root {
+  --highlight-color: null;
+}
+::-moz-selection {
+  background: var(--highlight-color);
+}
+
+::selection {
+  background: var(--highlight-color);
+}
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     min-height: 100vh;
     margin: 0;
@@ -99,7 +114,8 @@ min-height: 50vh;
 .desc{
     font-size: 2rem;
     color: #333;
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
 }
 .mentro{
     padding: 1rem 2.5rem;
@@ -145,12 +161,14 @@ figcaption{
     text-decoration: underline;
     color: #205424;
     /* color: #fff; */
+      margin-left: 4rem;
     margin-top: 3rem;
 }
 .feature p{
     font-size: 1.3rem;
     width: 50%;
     margin-top: 3rem;
+      margin-left: 4rem;
 }
 
 .about{
@@ -185,15 +203,15 @@ figcaption{
     flex-direction: row;
     flex-wrap: nowrap; 
     max-height: 5vh;
-    margin-top: 10rem;
+    margin-top: 1rem;
     /* overflow: hidden; */
     width: 100%;
-    border : 1px solid green;
       min-height: 300px;
       padding: 2rem;
 }
 .person{
     flex:  1 1 20rem;
+    padding: 1rem;
 }
 .person a{
     text-decoration: none;
@@ -225,9 +243,16 @@ figcaption{
     width: 80%;
     margin :0 auto ;
     min-height: 5vh;
+    border: 1px solid #205424;
+    margin-top: 1rem;
+    padding: 1rem;
 }
 .links p{
     font-size: 18px;
+}
+.links a{
+    color: #205424;
+    font-size: 1.5rem;
 }
 
 
@@ -245,6 +270,7 @@ footer ul {
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
+  list-style: none;
 }
 
 footer {
@@ -258,4 +284,402 @@ footer {
   flex-direction: row;
   width: 90%;
   margin :0 auto;
+}
+
+
+@media screen and (min-width:502px) and (max-width: 1000px) {
+    nav, .container, footer{
+        width: 100%;
+    }
+    .desc{
+        width: 90%;
+        margin:  0 auto;
+    }
+    .mentro{
+        padding: 0.8rem 1.5rem;
+    color: #333;
+margin-top: 2rem;
+border: 0;
+border: dashed  2px #205424;
+margin-bottom: 2rem;
+cursor: pointer;
+    }
+    .mentro a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 800;
+    color:  #205424;
+    
+}
+    .feature{
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .team{
+        width: 100%;
+         justify-content: center;
+        align-items: center;
+                flex-wrap: wrap;
+                padding: 0;
+                
+    }
+    .teammates{
+        margin: 0;
+    }
+    .teammates li{
+        flex-wrap: wrap-reverse;
+            border : 2px solid rgb(19, 187, 128);
+
+    }
+    .team{
+
+   min-height: 64vh; 
+
+}
+     .teammates li .person{
+          width: 100%;
+    text-align: center;
+     }
+ 
+  nav .burger {
+    display: none;
+  }
+ 
+   
+  
+.pic img{
+    width: 200px;
+  height: 200px ;
+  border-radius: 10px;
+    object-fit: cover;
+}
+.teammates{
+    list-style: none;
+    height: 10%;
+
+}
+
+figcaption{
+    font-size: 2rem;
+    font-weight: 600;
+    text-decoration: underline;
+    color: #205424;
+    /* color: #fff; */
+    width: 100%;
+    text-align: center;
+    margin-top: 3rem;
+    margin-left: 0rem;
+}
+.feature p{
+    font-size: 1.3rem;
+    width: 50%;
+      width: 100%;
+    text-align: center;
+    margin-top: 3rem;
+    margin-left: 0;
+}
+
+.about{
+    min-height: 30vh;
+
+}
+.about h3{
+    font-size: 2rem;
+    color: #205424;
+    padding: 1.5rem 1rem;
+      width: 100%;
+    text-align: center;
+
+}
+.about p{
+     font-size: 1.1rem;
+    padding: 0 0.3rem;
+}
+.links{
+    width: 100%;
+    margin :0 auto ;
+    min-height: 5vh;
+    border: 1px solid #205424;
+    margin-top: 1rem;
+    padding: 1rem;
+}
+.hero-section{
+
+    width: 100%;
+
+    /* margin: 0 auto; */
+    height: 500px;
+
+}
+}
+
+@media screen and (max-width:500px) {
+    nav, .container, footer{
+        width: 100%;
+    }
+    .desc{
+        width: 90%;
+        margin:  0 auto;
+    }
+    .mentro{
+        padding: 0.8rem 1.5rem;
+    color: #333;
+margin-top: 2rem;
+border: 0;
+border: dashed  2px #205424;
+margin-bottom: 2rem;
+cursor: pointer;
+    }
+    .mentro a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 800;
+    color:  #205424;
+    
+}
+    .feature{
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .team{
+        width: 100%;
+         justify-content: center;
+        align-items: center;
+                flex-wrap: wrap;
+                padding: 0;
+                
+    }
+    .teammates{
+        margin: 0;
+    }
+    .teammates li{
+        flex-wrap: wrap-reverse;
+            border : 2px solid rgb(19, 187, 128);
+
+    }
+     .teammates li:nth-child(2), .teammates li:nth-child(4){
+        flex-wrap: wrap;
+            border : 2px solid rgb(19, 187, 128);
+
+    }
+     .teammates li .person{
+          width: 100%;
+    text-align: center;
+     }
+      nav {
+    flex-wrap: nowrap;
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    flex-direction: row;
+    background-color: transparent;
+    justify-content: space-between;
+  }
+  nav .burger {
+    display: block;
+    position: relative;
+    flex: 1 1 20rem;
+    margin-right: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    max-width: 10%;
+    cursor: pointer;
+    z-index: 400;
+        transition:  2s ease-in;
+  }
+ 
+   .burger span {
+    background-color: #205424;
+    padding: 0.13rem 1.8rem;
+    display: block;
+    margin: 0.2rem;
+    transition:  2s ease-in;
+  }
+    .nav-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    left: 100%;
+    top: 10%;
+    color: white;
+    width: 100%;
+    height: 0%;
+    overflow-x: hidden;
+    transform: rotateZ(-90deg);
+    transform-origin: top left;
+    transition: transform 0.5s ease-in, height 1.5s ease-in;
+  }
+  .nav-links.nav-links.display a {
+
+    font-weight: 530;
+    text-decoration: underline;
+  }
+  .nav-links a.active {
+    text-decoration: none;
+  }
+  .row {
+    flex-direction: column;
+  }
+  .label {
+    width: 100%;
+    float: left;
+    margin-left: 0;
+
+  }
+  .burger.nav-opener .line1 {
+    transform: rotateZ(45deg) translateY(300%);
+  
+  }
+  .burger.nav-opener {
+
+    margin-bottom: -0.5rem;
+    flex: 1 1 20rem;
+    margin-right: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    align-items: center;
+    justify-content: center;
+    max-width: 20%;
+    position: relative;
+    top: 15%;
+    right: 0%;
+    z-index: 400;
+  }
+  .nav-opener .line2 {
+    opacity: 0;
+  }
+ 
+  .burger.nav-opener .line3 {
+    transform: rotateZ(-45deg) translateY(-300%);
+
+  }
+  .nav-links.display {
+    transform: rotateZ(0deg) translate(-100%);
+    height: 100vh;
+    background-color: #5dc265;
+  }
+  
+.pic img{
+    width: 150px;
+  height: 130px ;
+  border-radius: 10px;
+    object-fit: cover;
+}
+.team{
+   min-height: 175vh; 
+}
+.teammates{
+    list-style: none;
+
+}
+
+figcaption{
+    font-size: 2rem;
+    font-weight: 600;
+    text-decoration: underline;
+    color: #205424;
+    /* color: #fff; */
+    width: 100%;
+    text-align: center;
+    margin-top: 3rem;
+     margin-left: 0;
+}
+.feature p{
+    font-size: 1.3rem;
+    width: 50%;
+      width: 100%;
+    text-align: center;
+    margin-top: 3rem;
+     margin-left: 0;
+}
+
+.about{
+    min-height: 30vh;
+
+}
+.about h3{
+    font-size: 2rem;
+    color: #205424;
+    padding: 1.5rem 1rem;
+      width: 100%;
+    text-align: center;
+
+}
+.about p{
+     font-size: 1.1rem;
+    padding: 0 0.8rem;
+
+}
+.links{
+    width: 100%;
+    margin :0 auto ;
+    min-height: 5vh;
+    border: 1px solid #205424;
+    margin-top: 1rem;
+    padding: 1rem;
+}
+}
+
+@media screen  and (max-width: 376px) {
+    
+.intro h1{
+    font-size: 2.3rem;
+    font-weight: 500;
+    width: 100%;
+    color: white;
+    text-shadow: 0 1px 5px red;
+    padding: 2rem;
+    text-align: center;
+}
+.desc{
+    font-size: 1.47rem;
+    color: #333;
+    width: 90%;
+    margin: 0 auto;
+}
+.links p{
+    font-size: 18px;
+    margin-bottom: 1rem;
+}
+.links a{
+    color: #205424;
+    font-size: 1.2rem;
+}
+.hero-section{
+    width: 100%;
+    /* margin: 0 auto; */
+    height: 300px;
+
+}
+    .mentro{
+        padding: 0.5rem 1rem;
+    color: #333;
+margin-top: 2rem;
+border: 0;
+border: dashed  2px #205424;
+margin-bottom: 2rem;
+cursor: pointer;
+    }
+    .mentro a {
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 800;
+    color:  #205424;
+    
+}
+  .nav-links.display {
+    transform: rotateZ(0deg) translate(-100%);
+    min-height: 100vh;
+    background-color: #5dc265;
+    border-bottom: 1px solid #205424;
+  }
 }
